# Csdp

./: .gitattributes  .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
doc/: csdpuser.aux  csdpuser.bbl  csdpuser.blg  csdpuser.tex  sdp.bib
example/: Makefile  Makefile.am  Makefile.in
include/: declarations.h
lib/: Fnorm.c  Makefile  Makefile.am  Makefile.in  add_mat.c  addscaledmat.c  calc_dobj.c  calc_pobj.c  chol.c  copy_mat.c  debug-mat.c  easysdp.c  freeprob.c  initsoln.c  julia.c  linesearch.c  make_i.c  makefill.c  mat_mult.c  mat_multsp.c  matvec.c  norms.c  op_o.c  packed.c  psd_feas.c  readprob.c  sdp.c  solvesys.c  sortentries.c  sym_mat.c  trace_prod.c  user_exit.c
matlab/: csdp.m  readsdpa.m  readsol.m  writesdpa.m  writesol.m
solver/: Makefile  Makefile.am  Makefile.in  csdp.c
test/: Makefile.am  Makefile.in  g50.correct  theta1.correct
theta/: Makefile  Makefile.am  Makefile.in  complement.c  graphtoprob.c  theta.c
